[package]
name = "acrab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
google-cloud-pubsub = "0.13.0"
google-cloud-default = { version = "0.1.0", features = ["pubsub"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
google-cloud-gax = "0.13.0"
google-cloud-googleapis = "0.7.0"
google-authenticator = "0.3.0"
